{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 1709,
  "lineage": "cf1c9915-b99a-f7d7-fb8e-c0d998c629fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-ELB-Web-Secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-06f600b4dc2582baa",
            "description": "Public facing ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f600b4dc2582baa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_ELB-Web-Secure",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-General-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-005ce0efa767bd7a7",
            "description": "Security Group for Bastion Host in dev env",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005ce0efa767bd7a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.36.33.110/32"
                ],
                "description": "RDP Access from Public IP Addresses",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "212.36.33.110/32"
                ],
                "description": "SSh Access from Public IP Addresses",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_TEST-General-sg",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-Management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-07be2557b2deefeee",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07be2557b2deefeee",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.11.23/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_Management",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-dev-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-09cc35dc2ecba31f6",
            "description": "Security Group for the RDS Instance in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cc35dc2ecba31f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f86f126e73c8b7b"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dcc7f8a245ee8147"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e65c0ff98e86a6b1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev_dev-rds-sg",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpaagt1-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "aws_security_group.TEST-secure-api-svr-sg",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-rpaagt1-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-0dcc7f8a245ee8147",
            "description": "Security Group for RPAAGT1 Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcc7f8a245ee8147",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ce0efa767bd7a7"
                ],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e65c0ff98e86a6b1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8441,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e65c0ff98e86a6b1"
                ],
                "self": false,
                "to_port": 8450
              }
            ],
            "name": "dev_rpaagt1-sg",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-rpasvr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-0e65c0ff98e86a6b1",
            "description": "Security Group for RPA Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e65c0ff98e86a6b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ce0efa767bd7a7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ce0efa767bd7a7",
                  "sg-0dcc7f8a245ee8147"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev_rpasvr-sg",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TEST-secure-api-svr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:security-group/sg-09f86f126e73c8b7b",
            "description": "APISVR Security group to receive traffic from ELB in dev env",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f86f126e73c8b7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f600b4dc2582baa",
                  "sg-0e65c0ff98e86a6b1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f600b4dc2582baa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secure-api-svr-sg",
            "name_prefix": "",
            "owner_id": "899922192574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-rpasvr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4107978144",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e65c0ff98e86a6b1",
            "self": false,
            "source_security_group_id": "sg-0dcc7f8a245ee8147",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpaagt1-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-rpasvr-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-134900450",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e65c0ff98e86a6b1",
            "self": false,
            "source_security_group_id": "sg-005ce0efa767bd7a7",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-rpasvr-sg-ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2886347325",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e65c0ff98e86a6b1",
            "self": false,
            "source_security_group_id": "sg-005ce0efa767bd7a7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-secure-api-svr-elb-elb1-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-225747031",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f86f126e73c8b7b",
            "self": false,
            "source_security_group_id": "sg-06f600b4dc2582baa",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-ELB-Web-Secure",
            "aws_security_group.TEST-secure-api-svr-sg",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-secure-api-svr-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4054439845",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f86f126e73c8b7b",
            "self": false,
            "source_security_group_id": "sg-06f600b4dc2582baa",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-ELB-Web-Secure",
            "aws_security_group.TEST-secure-api-svr-sg",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "TEST-secure-api-svr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1972663081",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f86f126e73c8b7b",
            "self": false,
            "source_security_group_id": "sg-0e65c0ff98e86a6b1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-rpasvr-sg",
            "aws_security_group.TEST-secure-api-svr-sg",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f725a9bded0e9a0b",
            "peer_owner_id": "899922192574",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0a2ed6356b073bc22",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "dev secure vpc to general vpc peering connection"
            },
            "tags_all": {
              "Name": "dev secure vpc to general vpc peering connection"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:loadbalancer/app/dev-api-svr-alb/7f97b2f40d7ee87e",
            "arn_suffix": "app/dev-api-svr-alb/7f97b2f40d7ee87e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-api-svr-alb-861222672.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:899922192574:loadbalancer/app/dev-api-svr-alb/7f97b2f40d7ee87e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-api-svr-alb",
            "security_groups": [
              "sg-06f600b4dc2582baa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035260eb24ba9a520"
              },
              {
                "subnet_id": "subnet-06812c61f74618f84"
              },
              {
                "subnet_id": "subnet-0a41723757ed0ed40"
              }
            ],
            "subnets": [
              "subnet-035260eb24ba9a520",
              "subnet-06812c61f74618f84",
              "subnet-0a41723757ed0ed40"
            ],
            "tags": {
              "Name": "dev-api-svr-alb"
            },
            "tags_all": {
              "Name": "dev-api-svr-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-04a3d4581c5396352",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.TEST-ELB-Web-Secure",
            "aws_security_group.TEST-Management",
            "aws_security_group.TEST-secure-api-svr-sg",
            "data.aws_ami.amz_linux2",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.ec2_instance_api-svr.aws_instance.this",
            "module.ec2_instance_api-svr.aws_spot_instance_request.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:listener/app/dev-api-svr-alb/7f97b2f40d7ee87e/4b7dda2175b15fb5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:899922192574:listener/app/dev-api-svr-alb/7f97b2f40d7ee87e/4b7dda2175b15fb5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:loadbalancer/app/dev-api-svr-alb/7f97b2f40d7ee87e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TEST-ELB-Web-Secure",
            "aws_security_group.TEST-Management",
            "aws_security_group.TEST-secure-api-svr-sg",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.ec2_instance_api-svr.aws_instance.this",
            "module.ec2_instance_api-svr.aws_spot_instance_request.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451",
            "arn_suffix": "targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:899922192574:targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-api20220306230315299800000002",
            "name_prefix": "tg-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-api"
            },
            "tags_all": {
              "Name": "tg-api"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "aws_security_group.TEST-Management",
            "aws_security_group.TEST-secure-api-svr-sg",
            "data.aws_ami.amz_linux2",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.ec2_instance_api-svr.aws_instance.this",
            "module.ec2_instance_api-svr.aws_spot_instance_request.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.ec2_api_server",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:899922192574:targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451-20220306230317725100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:899922192574:targetgroup/tg-api20220306230315299800000002/d6e39747e65b9451",
            "target_id": "i-0cfdb9ef05063d2b0"
          },
          "dependencies": [
            "aws_security_group.TEST-Management",
            "aws_security_group.TEST-secure-api-svr-sg",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.ec2_instance_api-svr.aws_instance.this",
            "module.ec2_instance_api-svr.aws_spot_instance_request.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f275c72179fc4d78",
            "association_id": "eipassoc-0fda643709a5f7b58",
            "domain": "vpc",
            "id": "eipalloc-0f275c72179fc4d78",
            "network_border_group": "us-west-2",
            "network_interface": "eni-065fa8ecb8adaf585",
            "private_dns": "ip-192-168-12-18.us-west-2.compute.internal",
            "private_ip": "192.168.12.18",
            "public_dns": "ec2-52-10-97-131.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.97.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-general-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "dev-general-vpc-us-west-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:internet-gateway/igw-02083464a12308b26",
            "id": "igw-02083464a12308b26",
            "owner_id": "899922192574",
            "tags": {
              "Name": "dev-general-vpc"
            },
            "tags_all": {
              "Name": "dev-general-vpc"
            },
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f275c72179fc4d78",
            "connectivity_type": "public",
            "id": "nat-0c2e17235cabc2650",
            "network_interface_id": "eni-065fa8ecb8adaf585",
            "private_ip": "192.168.12.18",
            "public_ip": "52.10.97.131",
            "subnet_id": "subnet-0956881a7a03db7db",
            "tags": {
              "Name": "dev-general-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "dev-general-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.dev-general-vpc.aws_eip.nat",
            "module.dev-general-vpc.aws_internet_gateway.this",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b3a5602b9a88380e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2e17235cabc2650",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3a5602b9a88380e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-general-vpc.aws_eip.nat",
            "module.dev-general-vpc.aws_internet_gateway.this",
            "module.dev-general-vpc.aws_nat_gateway.this",
            "module.dev-general-vpc.aws_route_table.private",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02083464a12308b26",
            "id": "r-rtb-09ab34fe2d1ffd6bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ab34fe2d1ffd6bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-general-vpc.aws_internet_gateway.this",
            "module.dev-general-vpc.aws_route_table.public",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:route-table/rtb-0b3a5602b9a88380e",
            "id": "rtb-0b3a5602b9a88380e",
            "owner_id": "899922192574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2e17235cabc2650",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-general-vpc-private"
            },
            "tags_all": {
              "Name": "dev-general-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:route-table/rtb-09ab34fe2d1ffd6bf",
            "id": "rtb-09ab34fe2d1ffd6bf",
            "owner_id": "899922192574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02083464a12308b26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-general-vpc-public"
            },
            "tags_all": {
              "Name": "dev-general-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fd2f4e4bc9fdf9d",
            "route_table_id": "rtb-0b3a5602b9a88380e",
            "subnet_id": "subnet-0daf63ae466c15d97"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_route_table.private",
            "module.dev-general-vpc.aws_subnet.private",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09733fc20ed2bc4e8",
            "route_table_id": "rtb-0b3a5602b9a88380e",
            "subnet_id": "subnet-0f89120310d0633ed"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_route_table.private",
            "module.dev-general-vpc.aws_subnet.private",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cce5060e53b0611",
            "route_table_id": "rtb-09ab34fe2d1ffd6bf",
            "subnet_id": "subnet-0956881a7a03db7db"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_route_table.public",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726266a4533efa14",
            "route_table_id": "rtb-09ab34fe2d1ffd6bf",
            "subnet_id": "subnet-0bd058516ae4dbe7c"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_route_table.public",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-0daf63ae466c15d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.10.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf63ae466c15d97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-general-vpc-private-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-general-vpc-private-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-0f89120310d0633ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.11.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f89120310d0633ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-general-vpc-private-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-general-vpc-private-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-0956881a7a03db7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.12.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0956881a7a03db7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-general-vpc-public-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-general-vpc-public-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-0bd058516ae4dbe7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.13.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd058516ae4dbe7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-general-vpc-public-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-general-vpc-public-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-0a2ed6356b073bc22"
          },
          "dependencies": [
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev-general-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:vpc/vpc-0a2ed6356b073bc22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.8.0/21",
            "default_network_acl_id": "acl-0f2c9e3d1bddcef4f",
            "default_route_table_id": "rtb-0d4614625ed086e92",
            "default_security_group_id": "sg-02b44b478482f04b6",
            "dhcp_options_id": "dopt-3f8b5347",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2ed6356b073bc22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4614625ed086e92",
            "owner_id": "899922192574",
            "tags": {
              "Name": "vpc-general-dev"
            },
            "tags_all": {
              "Name": "vpc-general-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f12e8f032308296",
            "association_id": "eipassoc-050aab21df9bec353",
            "domain": "vpc",
            "id": "eipalloc-08f12e8f032308296",
            "network_border_group": "us-west-2",
            "network_interface": "eni-045fb22fa702ea547",
            "private_dns": "ip-192-168-4-56.us-west-2.compute.internal",
            "private_ip": "192.168.4.56",
            "public_dns": "ec2-35-165-3-48.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.3.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-secure-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-us-west-2a"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:internet-gateway/igw-055078646eb136dc2",
            "id": "igw-055078646eb136dc2",
            "owner_id": "899922192574",
            "tags": {
              "Name": "dev-secure-vpc"
            },
            "tags_all": {
              "Name": "dev-secure-vpc"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f12e8f032308296",
            "connectivity_type": "public",
            "id": "nat-061d6794dfb5aa85a",
            "network_interface_id": "eni-045fb22fa702ea547",
            "private_ip": "192.168.4.56",
            "public_ip": "35.165.3.48",
            "subnet_id": "subnet-0a41723757ed0ed40",
            "tags": {
              "Name": "dev-secure-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0909ac98d266690521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-061d6794dfb5aa85a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0909ac98d26669052",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-055078646eb136dc2",
            "id": "r-rtb-0be658f6ab33d37fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be658f6ab33d37fe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:route-table/rtb-0909ac98d26669052",
            "id": "rtb-0909ac98d26669052",
            "owner_id": "899922192574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061d6794dfb5aa85a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-secure-vpc-private"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:route-table/rtb-0be658f6ab33d37fe",
            "id": "rtb-0be658f6ab33d37fe",
            "owner_id": "899922192574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055078646eb136dc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-secure-vpc-public"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3987b4552d3db89",
            "route_table_id": "rtb-0909ac98d26669052",
            "subnet_id": "subnet-05d3099c2bb6e0be3"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cc027753a9cdb79",
            "route_table_id": "rtb-0909ac98d26669052",
            "subnet_id": "subnet-045b2ecdae9f24a94"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07145a7d824610d60",
            "route_table_id": "rtb-0909ac98d26669052",
            "subnet_id": "subnet-07dd105ca2f923d96"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0676b58ec6b4aa515",
            "route_table_id": "rtb-0be658f6ab33d37fe",
            "subnet_id": "subnet-0a41723757ed0ed40"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dfb31ded9442027",
            "route_table_id": "rtb-0be658f6ab33d37fe",
            "subnet_id": "subnet-06812c61f74618f84"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d92fe1fa7fe85c",
            "route_table_id": "rtb-0be658f6ab33d37fe",
            "subnet_id": "subnet-035260eb24ba9a520"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-05d3099c2bb6e0be3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3099c2bb6e0be3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-private-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-private-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-045b2ecdae9f24a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b2ecdae9f24a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-private-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-private-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-07dd105ca2f923d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dd105ca2f923d96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-private-us-west-2c",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-private-us-west-2c",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-0a41723757ed0ed40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41723757ed0ed40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-public-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-public-us-west-2a",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-06812c61f74618f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06812c61f74618f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-public-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-public-us-west-2b",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:subnet/subnet-035260eb24ba9a520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035260eb24ba9a520",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899922192574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-secure-vpc-public-us-west-2c",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-secure-vpc-public-us-west-2c",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "vpc_id": "vpc-04a3d4581c5396352"
          },
          "dependencies": [
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev-secure_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:899922192574:vpc/vpc-04a3d4581c5396352",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/21",
            "default_network_acl_id": "acl-05649d9b59ac4865e",
            "default_route_table_id": "rtb-0c2105f365b8cc5c9",
            "default_security_group_id": "sg-0d40f9b8bc7ba9b10",
            "dhcp_options_id": "dopt-3f8b5347",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04a3d4581c5396352",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2105f365b8cc5c9",
            "owner_id": "899922192574",
            "tags": {
              "Name": "vpc-secure-dev"
            },
            "tags_all": {
              "Name": "vpc-secure-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_api-svr",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00656d51d312f0dee",
            "arn": "arn:aws:ec2:us-west-2:899922192574:instance/i-0cfdb9ef05063d2b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfdb9ef05063d2b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tipton_staging_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c04a3698ba2b0193",
            "private_dns": "ip-192-168-1-43.us-west-2.compute.internal",
            "private_ip": "192.168.1.43",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:us-west-2:899922192574:key/37db33b7-0a2b-44a4-96ff-212352fc1019",
                "throughput": 0,
                "volume_id": "vol-03c586f8c67578794",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d3099c2bb6e0be3",
            "tags": {
              "Name": "dev-API-svr",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tags_all": {
              "Name": "dev-API-svr",
              "environment": "dev",
              "owners": "terraform-ci"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-API-svr"
            },
            "vpc_security_group_ids": [
              "sg-07be2557b2deefeee",
              "sg-09f86f126e73c8b7b"
            ]
          },
          "dependencies": [
            "aws_security_group.TEST-Management",
            "aws_security_group.TEST-secure-api-svr-sg",
            "data.aws_ami.amz_linux2",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance_linux_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cdb04696938ec9d",
            "arn": "arn:aws:ec2:us-west-2:899922192574:instance/i-00d10c017c6902dae",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d10c017c6902dae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tipton_staging_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fce1fe33c089b9db",
            "private_dns": "ip-192-168-12-13.us-west-2.compute.internal",
            "private_ip": "192.168.12.13",
            "public_dns": "ec2-54-184-67-218.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.67.218",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:us-west-2:899922192574:key/37db33b7-0a2b-44a4-96ff-212352fc1019",
                "throughput": 0,
                "volume_id": "vol-08af9fdc5988bd8ea",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0956881a7a03db7db",
            "tags": {
              "Name": "dev_bastion_host",
              "Patch Group": "Ubuntu_Servers",
              "host": "dev_bastion_host"
            },
            "tags_all": {
              "Name": "dev_bastion_host",
              "Patch Group": "Ubuntu_Servers",
              "host": "dev_bastion_host"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-Linux-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-005ce0efa767bd7a7"
            ]
          },
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "data.aws_ami.ubuntu",
            "module.dev-general-vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-general-vpc.aws_customer_gateway.this",
            "module.dev-general-vpc.aws_db_subnet_group.database",
            "module.dev-general-vpc.aws_default_network_acl.this",
            "module.dev-general-vpc.aws_default_route_table.default",
            "module.dev-general-vpc.aws_default_security_group.this",
            "module.dev-general-vpc.aws_default_vpc.this",
            "module.dev-general-vpc.aws_egress_only_internet_gateway.this",
            "module.dev-general-vpc.aws_eip.nat",
            "module.dev-general-vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-general-vpc.aws_flow_log.this",
            "module.dev-general-vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_internet_gateway.this",
            "module.dev-general-vpc.aws_nat_gateway.this",
            "module.dev-general-vpc.aws_network_acl.database",
            "module.dev-general-vpc.aws_network_acl.elasticache",
            "module.dev-general-vpc.aws_network_acl.intra",
            "module.dev-general-vpc.aws_network_acl.outpost",
            "module.dev-general-vpc.aws_network_acl.private",
            "module.dev-general-vpc.aws_network_acl.public",
            "module.dev-general-vpc.aws_network_acl.redshift",
            "module.dev-general-vpc.aws_network_acl_rule.database_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.database_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.private_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.private_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.public_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.public_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-general-vpc.aws_redshift_subnet_group.redshift",
            "module.dev-general-vpc.aws_route.database_internet_gateway",
            "module.dev-general-vpc.aws_route.database_ipv6_egress",
            "module.dev-general-vpc.aws_route.database_nat_gateway",
            "module.dev-general-vpc.aws_route.private_ipv6_egress",
            "module.dev-general-vpc.aws_route.private_nat_gateway",
            "module.dev-general-vpc.aws_route.public_internet_gateway",
            "module.dev-general-vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-general-vpc.aws_route_table.database",
            "module.dev-general-vpc.aws_route_table.elasticache",
            "module.dev-general-vpc.aws_route_table.intra",
            "module.dev-general-vpc.aws_route_table.private",
            "module.dev-general-vpc.aws_route_table.public",
            "module.dev-general-vpc.aws_route_table.redshift",
            "module.dev-general-vpc.aws_route_table_association.database",
            "module.dev-general-vpc.aws_route_table_association.elasticache",
            "module.dev-general-vpc.aws_route_table_association.intra",
            "module.dev-general-vpc.aws_route_table_association.outpost",
            "module.dev-general-vpc.aws_route_table_association.private",
            "module.dev-general-vpc.aws_route_table_association.public",
            "module.dev-general-vpc.aws_route_table_association.redshift",
            "module.dev-general-vpc.aws_route_table_association.redshift_public",
            "module.dev-general-vpc.aws_subnet.database",
            "module.dev-general-vpc.aws_subnet.elasticache",
            "module.dev-general-vpc.aws_subnet.intra",
            "module.dev-general-vpc.aws_subnet.outpost",
            "module.dev-general-vpc.aws_subnet.private",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_subnet.redshift",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_dhcp_options.this",
            "module.dev-general-vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-general-vpc.aws_vpn_gateway.this",
            "module.dev-general-vpc.aws_vpn_gateway_attachment.this",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-general-vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-general-vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_rpa-agt-svr",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01977bc15980f9223",
            "arn": "arn:aws:ec2:us-west-2:899922192574:instance/i-0e2d5b41cb38f7a92",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2d5b41cb38f7a92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tipton_staging_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0993da41c75ab029f",
            "private_dns": "ip-192-168-3-222.us-west-2.compute.internal",
            "private_ip": "192.168.3.222",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-west-2:899922192574:key/37db33b7-0a2b-44a4-96ff-212352fc1019",
                "throughput": 0,
                "volume_id": "vol-075ae5c73d7dd6908",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dd105ca2f923d96",
            "tags": {
              "Host": "dev_RPAAGT",
              "Name": "dev_RPAAGT",
              "Patch Group": "Windows_Servers",
              "UpdateGroup": "CriticalPatches"
            },
            "tags_all": {
              "Host": "dev_RPAAGT",
              "Name": "dev_RPAAGT",
              "Patch Group": "Windows_Servers",
              "UpdateGroup": "CriticalPatches"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-RPA-AGT-svr"
            },
            "vpc_security_group_ids": [
              "sg-0dcc7f8a245ee8147"
            ]
          },
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "aws_security_group.TEST-rpaagt1-sg",
            "aws_security_group.TEST-rpasvr-sg",
            "data.aws_ami.amz_windows",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_rpa-svr-svr",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00656d51d312f0dee",
            "arn": "arn:aws:ec2:us-west-2:899922192574:instance/i-00567185407d0e53a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00567185407d0e53a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tipton_staging_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075e3cbbf19d16aaa",
            "private_dns": "ip-192-168-3-203.us-west-2.compute.internal",
            "private_ip": "192.168.3.203",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-west-2:899922192574:key/37db33b7-0a2b-44a4-96ff-212352fc1019",
                "throughput": 0,
                "volume_id": "vol-071aa5731f7101d49",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dd105ca2f923d96",
            "tags": {
              "Name": "dev_RPASVR",
              "Patch Group": "Ubuntu_Servers",
              "host": "dev_RPASVR"
            },
            "tags_all": {
              "Name": "dev_RPASVR",
              "Patch Group": "Ubuntu_Servers",
              "host": "dev_RPASVR"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-RPA-svr"
            },
            "vpc_security_group_ids": [
              "sg-0e65c0ff98e86a6b1"
            ]
          },
          "dependencies": [
            "aws_security_group.TEST-rpasvr-sg",
            "data.aws_ami.amz_linux2",
            "module.dev-secure_vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-secure_vpc.aws_customer_gateway.this",
            "module.dev-secure_vpc.aws_db_subnet_group.database",
            "module.dev-secure_vpc.aws_default_network_acl.this",
            "module.dev-secure_vpc.aws_default_route_table.default",
            "module.dev-secure_vpc.aws_default_security_group.this",
            "module.dev-secure_vpc.aws_default_vpc.this",
            "module.dev-secure_vpc.aws_egress_only_internet_gateway.this",
            "module.dev-secure_vpc.aws_eip.nat",
            "module.dev-secure_vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-secure_vpc.aws_flow_log.this",
            "module.dev-secure_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-secure_vpc.aws_internet_gateway.this",
            "module.dev-secure_vpc.aws_nat_gateway.this",
            "module.dev-secure_vpc.aws_network_acl.database",
            "module.dev-secure_vpc.aws_network_acl.elasticache",
            "module.dev-secure_vpc.aws_network_acl.intra",
            "module.dev-secure_vpc.aws_network_acl.outpost",
            "module.dev-secure_vpc.aws_network_acl.private",
            "module.dev-secure_vpc.aws_network_acl.public",
            "module.dev-secure_vpc.aws_network_acl.redshift",
            "module.dev-secure_vpc.aws_network_acl_rule.database_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.database_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.private_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.public_outbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-secure_vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-secure_vpc.aws_redshift_subnet_group.redshift",
            "module.dev-secure_vpc.aws_route.database_internet_gateway",
            "module.dev-secure_vpc.aws_route.database_ipv6_egress",
            "module.dev-secure_vpc.aws_route.database_nat_gateway",
            "module.dev-secure_vpc.aws_route.private_ipv6_egress",
            "module.dev-secure_vpc.aws_route.private_nat_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway",
            "module.dev-secure_vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-secure_vpc.aws_route_table.database",
            "module.dev-secure_vpc.aws_route_table.elasticache",
            "module.dev-secure_vpc.aws_route_table.intra",
            "module.dev-secure_vpc.aws_route_table.private",
            "module.dev-secure_vpc.aws_route_table.public",
            "module.dev-secure_vpc.aws_route_table.redshift",
            "module.dev-secure_vpc.aws_route_table_association.database",
            "module.dev-secure_vpc.aws_route_table_association.elasticache",
            "module.dev-secure_vpc.aws_route_table_association.intra",
            "module.dev-secure_vpc.aws_route_table_association.outpost",
            "module.dev-secure_vpc.aws_route_table_association.private",
            "module.dev-secure_vpc.aws_route_table_association.public",
            "module.dev-secure_vpc.aws_route_table_association.redshift",
            "module.dev-secure_vpc.aws_route_table_association.redshift_public",
            "module.dev-secure_vpc.aws_subnet.database",
            "module.dev-secure_vpc.aws_subnet.elasticache",
            "module.dev-secure_vpc.aws_subnet.intra",
            "module.dev-secure_vpc.aws_subnet.outpost",
            "module.dev-secure_vpc.aws_subnet.private",
            "module.dev-secure_vpc.aws_subnet.public",
            "module.dev-secure_vpc.aws_subnet.redshift",
            "module.dev-secure_vpc.aws_vpc.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options.this",
            "module.dev-secure_vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-secure_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-secure_vpc.aws_vpn_gateway.this",
            "module.dev-secure_vpc.aws_vpn_gateway_attachment.this",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-secure_vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-secure_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-secure_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_windows_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6bcfa0178e7ee23",
            "arn": "arn:aws:ec2:us-west-2:899922192574:instance/i-04c8d690a2d615524",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c8d690a2d615524",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tipton_staging_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01fe7df4a0315329c",
            "private_dns": "ip-192-168-12-21.us-west-2.compute.internal",
            "private_ip": "192.168.12.21",
            "public_dns": "ec2-54-191-14-94.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.14.94",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:us-west-2:899922192574:key/37db33b7-0a2b-44a4-96ff-212352fc1019",
                "throughput": 0,
                "volume_id": "vol-0a4f569386df9e19d",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0956881a7a03db7db",
            "tags": {
              "Host": "dev_Bastion_Windows",
              "Name": "dev_Bastion_Windows",
              "Patch Group": "Windows_Servers"
            },
            "tags_all": {
              "Host": "dev_Bastion_Windows",
              "Name": "dev_Bastion_Windows",
              "Patch Group": "Windows_Servers"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-Windows-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-005ce0efa767bd7a7"
            ]
          },
          "dependencies": [
            "aws_security_group.TEST-General-sg",
            "data.aws_ami.windows",
            "module.dev-general-vpc.aws_cloudwatch_log_group.flow_log",
            "module.dev-general-vpc.aws_customer_gateway.this",
            "module.dev-general-vpc.aws_db_subnet_group.database",
            "module.dev-general-vpc.aws_default_network_acl.this",
            "module.dev-general-vpc.aws_default_route_table.default",
            "module.dev-general-vpc.aws_default_security_group.this",
            "module.dev-general-vpc.aws_default_vpc.this",
            "module.dev-general-vpc.aws_egress_only_internet_gateway.this",
            "module.dev-general-vpc.aws_eip.nat",
            "module.dev-general-vpc.aws_elasticache_subnet_group.elasticache",
            "module.dev-general-vpc.aws_flow_log.this",
            "module.dev-general-vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.dev-general-vpc.aws_internet_gateway.this",
            "module.dev-general-vpc.aws_nat_gateway.this",
            "module.dev-general-vpc.aws_network_acl.database",
            "module.dev-general-vpc.aws_network_acl.elasticache",
            "module.dev-general-vpc.aws_network_acl.intra",
            "module.dev-general-vpc.aws_network_acl.outpost",
            "module.dev-general-vpc.aws_network_acl.private",
            "module.dev-general-vpc.aws_network_acl.public",
            "module.dev-general-vpc.aws_network_acl.redshift",
            "module.dev-general-vpc.aws_network_acl_rule.database_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.database_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.elasticache_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.elasticache_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.intra_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.intra_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.outpost_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.outpost_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.private_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.private_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.public_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.public_outbound",
            "module.dev-general-vpc.aws_network_acl_rule.redshift_inbound",
            "module.dev-general-vpc.aws_network_acl_rule.redshift_outbound",
            "module.dev-general-vpc.aws_redshift_subnet_group.redshift",
            "module.dev-general-vpc.aws_route.database_internet_gateway",
            "module.dev-general-vpc.aws_route.database_ipv6_egress",
            "module.dev-general-vpc.aws_route.database_nat_gateway",
            "module.dev-general-vpc.aws_route.private_ipv6_egress",
            "module.dev-general-vpc.aws_route.private_nat_gateway",
            "module.dev-general-vpc.aws_route.public_internet_gateway",
            "module.dev-general-vpc.aws_route.public_internet_gateway_ipv6",
            "module.dev-general-vpc.aws_route_table.database",
            "module.dev-general-vpc.aws_route_table.elasticache",
            "module.dev-general-vpc.aws_route_table.intra",
            "module.dev-general-vpc.aws_route_table.private",
            "module.dev-general-vpc.aws_route_table.public",
            "module.dev-general-vpc.aws_route_table.redshift",
            "module.dev-general-vpc.aws_route_table_association.database",
            "module.dev-general-vpc.aws_route_table_association.elasticache",
            "module.dev-general-vpc.aws_route_table_association.intra",
            "module.dev-general-vpc.aws_route_table_association.outpost",
            "module.dev-general-vpc.aws_route_table_association.private",
            "module.dev-general-vpc.aws_route_table_association.public",
            "module.dev-general-vpc.aws_route_table_association.redshift",
            "module.dev-general-vpc.aws_route_table_association.redshift_public",
            "module.dev-general-vpc.aws_subnet.database",
            "module.dev-general-vpc.aws_subnet.elasticache",
            "module.dev-general-vpc.aws_subnet.intra",
            "module.dev-general-vpc.aws_subnet.outpost",
            "module.dev-general-vpc.aws_subnet.private",
            "module.dev-general-vpc.aws_subnet.public",
            "module.dev-general-vpc.aws_subnet.redshift",
            "module.dev-general-vpc.aws_vpc.this",
            "module.dev-general-vpc.aws_vpc_dhcp_options.this",
            "module.dev-general-vpc.aws_vpc_dhcp_options_association.this",
            "module.dev-general-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.dev-general-vpc.aws_vpn_gateway.this",
            "module.dev-general-vpc.aws_vpn_gateway_attachment.this",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.intra",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.private",
            "module.dev-general-vpc.aws_vpn_gateway_route_propagation.public",
            "module.dev-general-vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.dev-general-vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    }
  ]
}